<resources>
    <string name="app_name">Fredrick_abrera_Ricardo_rey_act3</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="cancelbutton">cancelButton</string>
    <string name="continuebutton">continuebutton</string>
    <string name="left_parentheses">Left Parentheses</string>
    <string name="right_parentheses">Right Parentheses</string>
    <string name="positive_negative_toggle">Positive / Negative Toggle</string>
    <string name="division">Division</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiplication">Multiplication</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="subtraction">Subtraction</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="addition">Addition</string>
    <string name="dot">Dot</string>
    <string name="_0">0</string>
    <string name="equals">Equals</string>
    <string name="equals_symbol">&#160;=</string>
    <string name="syntax_error_message">Syntax Error</string>
    <string name="ce">CE</string>
    <string name="percent">Percent</string>
    <string name="backspace">Backspace</string>
    <string name="calculatorbtn">calculatorBtn</string>
    <string name="sampledate">SampleDate</string>
    <string name="names">Made By:\nFredrick D. Abrera\nRicardo R. Rey III</string>
    <string name="section">IT0079\nAW22</string>
    <string name="professor">Submitted to:\nMr. Nite Guerrero</string>
    <string name="backbutton">backbutton</string>
    <string name="calculator">Calculator</string>
    <string name="about_us">About Us</string>
    <string name="c">C</string>
    <string name="profile_photo">profile_photo</string>
</resources>