<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/windows_vista_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="203dp"
        android:layout_marginBottom="242dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="163dp"
            android:layout_height="176dp"
            android:layout_marginBottom="30dp"
            app:srcCompat="@drawable/img_frame"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="114dp" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="5dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="323dp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:layout_marginBottom="30dp"
            android:background="@color/white"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="384dp" />

        <ImageButton
            android:id="@+id/continueBtn"
            android:layout_width="65dp"
            android:layout_height="56dp"
            android:contentDescription="@string/continuebutton"
            android:background="@null"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vista_continue_btn" />

        <ImageButton
            android:id="@+id/cancelBtn"
            android:layout_width="166dp"
            android:layout_height="60dp"
            android:background="@null"
            android:contentDescription="@string/cancelbutton"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/vista_cancel_btn"
            tools:layout_editor_absoluteX="36dp"
            tools:layout_editor_absoluteY="516dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>